use-cases/two-tier-architectures/layer-4/serviceLB.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cis.f5.com/ipamLabel: prod
  name: nginx-plus-layer4
  namespace: nginx
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: nginx-plus
  type: LoadBalancer
