use-cases/two-tier-architectures/layer-4/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: layer4
spec:
  ingressClassName: nginx-plus
  rules:
  - host: l4-app1.f5demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  namespace: layer4
spec:
  ingressClassName: nginx-plus
  rules:
  - host: l4-app2.f5demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-layer4
  namespace: layer4
spec:
  ingressClassName: nginx-plus
  rules:
  - host: l4-www.f5demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-svc
            port:
              number: 80
